# POuL-Widget

./: CMakeLists.txt  README  main.cpp  poulstatus.cpp  poulstatus.h  poulwidget.cpp  poulwidget.desktop  poulwidget.h
debian/: README  changelog  control  copyright  rules
qmaemo5homescreenadaptor/: qmaemo5homescreenadaptor.cpp
resources/: resource.rcc
